fixed header so it centers on small window

--- a/style.css
+++ b/style.css
@@ -154,4 +154,7 @@ table{
         height: 250px;
         width: auto;    
     }
+    h1{
+        text-align: center;
+    }
 }
